# initree

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: contract-guardian.md  engine-dev.md  layer-author.md
.claude/rules/: code-style.md  git.md  tone.md
.claude/skills/capability-registry/: SKILL.md  capabilities.yaml
.claude/skills/check-contract/: SKILL.md
.claude/skills/new-layer/: SKILL.md  layer.template.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: 02-generalization-proof.md  03-capability-registry-v1.md  04-layer-authoring-guide.md  README.md  authoring.md  lifecycle.md  registry.md  roadmap.md  tasks.md
layers/docker/: layer.yaml
layers/docker/templates/: Dockerfile
layers/express/: layer.yaml
layers/express/templates/src/: index.js
layers/express/templates/test/: health.test.js
layers/fastapi/: layer.yaml
layers/fastapi/templates/app/: main.py
layers/fastapi/templates/tests/: test_health.py
layers/gh-actions/: layer.yaml
layers/gh-actions/hooks/: render_steps.py
layers/gh-actions/templates/.github/workflows/: ci.yml
layers/gin/: layer.yaml
layers/gin/templates/cmd/server/: main.go
layers/gin/templates/internal/handler/: handler.go
layers/gitlab-ci/: layer.yaml
layers/gitlab-ci/hooks/: render_jobs.py
layers/gitlab-ci/templates/: .gitlab-ci.yml
layers/go/: layer.yaml
layers/go/templates/: go.mod
layers/k8s/: layer.yaml
layers/k8s/hooks/: compute.py
layers/k8s/templates/k8s/: deployment.yaml  kustomization.yaml  service.yaml
layers/node/: layer.yaml
layers/node/templates/: .gitignore  package.json
layers/podman/: layer.yaml
layers/podman/templates/: .containerignore  Containerfile
layers/python/: layer.yaml
layers/python/templates/: .gitignore  .python-version  pyproject.toml
layers/slack/: layer.yaml
layers/vps-ssh/: layer.yaml
layers/vps-ssh/hooks/: chmod.sh
layers/vps-ssh/templates/deploy/: deploy.sh
src/initree/: __init__.py  cli.py  context.py  emit.py  finalize.py  lifecycle.py  manifest.py  prompt.py  recipe.py  registry.py  resolve.py  resources.py  secrets.py
tests/: test_cli.py  test_cli_smoke.py  test_compute.py  test_container_image_prep.py  test_emit.py  test_finalize.py  test_golden_slice1.py  test_golden_slice2.py  test_golden_slice3.py  test_lifecycle.py  test_manifest.py  test_podman.py  test_prompt.py  test_recipe.py  test_resolve.py  test_secrets.py  test_slice1.py  test_slice2.py  test_slice3.py  test_vps_ssh.py
tests/fixtures/compute-slice/docker/: layer.yaml
tests/fixtures/compute-slice/fastapi/: layer.yaml
tests/fixtures/compute-slice/python/: layer.yaml
tests/fixtures/cycle/loop-ci/: layer.yaml
tests/fixtures/cycle/loop-container/: layer.yaml
tests/fixtures/dangling-inject/lang/: layer.yaml
tests/fixtures/dangling-inject/web/: layer.yaml
tests/fixtures/emit-slice/docker/: layer.yaml
tests/fixtures/emit-slice/docker/templates/: Dockerfile
tests/fixtures/emit-slice/gin/: layer.yaml
tests/fixtures/emit-slice/gin/templates/cmd/: main.go
tests/fixtures/emit-slice/go/: layer.yaml
tests/fixtures/emit-slice/go/templates/: .gitignore
tests/fixtures/missing-container/ci-sys/: layer.yaml
tests/fixtures/missing-container/deploy-vps/: layer.yaml
tests/fixtures/missing-container/lang/: layer.yaml
tests/fixtures/missing-container/web/: layer.yaml
tests/fixtures/missing-provider/container/: layer.yaml
tests/fixtures/missing-provider/lang/: layer.yaml
tests/fixtures/owns-overlap/container-b/: layer.yaml
tests/fixtures/owns-overlap/lang-a/: layer.yaml
tests/fixtures/unsatisfied-requirement/web/: layer.yaml
tests/fixtures/valid-full/docker/: layer.yaml
tests/fixtures/valid-full/gin/: layer.yaml
tests/fixtures/valid-full/gitlab-ci/: layer.yaml
tests/fixtures/valid-full/go/: layer.yaml
tests/fixtures/valid-full/k8s/: layer.yaml
tests/fixtures/valid-full/slack/: layer.yaml
tests/golden/slice1/: .dockerignore  Dockerfile  INITREE_SECRETS.md  pyproject.toml
tests/golden/slice1/.github/workflows/: ci.yml
tests/golden/slice1/app/: main.py
tests/golden/slice1/deploy/: deploy.sh
tests/golden/slice2/: .gitignore  .gitlab-ci.yml  Dockerfile  INITREE_SECRETS.md  go.mod
tests/golden/slice2/cmd/server/: main.go
tests/golden/slice2/internal/handler/: handler.go
tests/golden/slice2/k8s/: deployment.yaml  kustomization.yaml  service.yaml
tests/golden/slice3/: Dockerfile  package.json
tests/golden/slice3/.github/workflows/: ci.yml
tests/golden/slice3/deploy/: deploy.sh
tests/golden/slice3/src/: index.js
tests/golden/slice3/test/: health.test.js
