[project]
name = "initree"
version = "0.1.0"
description = "A composition orchestrator for project scaffolding — compose layers, not templates."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ibrah5em", email = "ebrahym.das@gmail.com" }]
keywords = ["scaffolding", "project-generator", "code-generator", "cli", "composition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "pydantic>=2.7",
    "jinja2>=3.1",
    "tomlkit>=0.12",
    "ruamel.yaml>=0.18",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/ibrah5em/initree"
Repository = "https://github.com/ibrah5em/initree"
Issues = "https://github.com/ibrah5em/initree/issues"

[project.scripts]
initree = "initree.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/initree"]

# The layers and the capability registry are the engine's runtime data but live outside the package
# (repo root / .claude) as the dev source of truth. Copy them into the wheel under _bundled/ so an
# installed `initree` is self-contained; resources.py prefers the checkout copy and falls back here.
[tool.hatch.build.targets.wheel.force-include]
"layers" = "initree/_bundled/layers"
".claude/skills/capability-registry/capabilities.yaml" = "initree/_bundled/capabilities.yaml"

# The sdist mirrors the wheel's bundled data so `pip install` from source (no checkout) also works.
[tool.hatch.build.targets.sdist]
include = ["src/initree", "layers", ".claude/skills/capability-registry/capabilities.yaml", "docs", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# golden/ holds emitted projects we lock byte-for-byte; layers/*/templates hold ${...}/{{...}}
# placeholders that aren't valid Python or TOML. Neither is our source — keep ruff (and its cache)
# out of both, or `ruff check tests` would rewrite a fixture and a template would fail to parse.
extend-exclude = ["tests/golden", "layers/*/templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# typer.Option/Argument are sentinel factories, not mutable shared state — safe as arg defaults.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# golden/ holds byte-exact snapshots of emitted projects, including their own test files
# (e.g. a scaffolded tests/test_health.py). Those are fixtures, not our suite — don't collect them.
addopts = "--ignore=tests/golden"

[tool.pyright]
include = ["src", "tests"]
# Same reason as ruff's exclude: the golden snapshots are scaffolded projects (they import fastapi
# etc., which aren't our deps), not code we type-check.
exclude = ["tests/golden", "**/__pycache__", "**/node_modules", "**/.*"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
