[project]
name = "${project.slug}"
version = "0.1.0"
description = "${project.name}"
requires-python = ">=${runtime.version}"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
